--- a/style.css
+++ b/style.css
@@ -1,279 +1,52 @@
 body {
     margin: 0;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    color: rgb(38, 38, 38);
- }
-
- .post-list {
-    justify-self: center;
-    display: grid;
-    min-width: 600px;
-    /* width: minmax(400px, 945px); */
-
-    grid-template-columns: repeat(3, minmax(120px, 293px));
-    /* grid-template-rows: repeat(3, minmax(120px, 293px));  */
-    grid-gap: 28px;
-    justify-content: center;
-    margin-top: 60px;
- }
-
- /* TAMAÑO INFERIOR A TABLET */
- @media screen and (max-width:1000px) {
-    .post-list {
-       grid-gap: 3px;
-    }
- }
-
- .post {
-    /* CAMBIA EL CURSOR A MANITA PARA INDICAR QUE ES UN ENLACE */
-    cursor: pointer;
-    /* PERMITE MOVER UN ELEMENTO CON LEFT RIGHT UP DOWN (superponer si es necesario)*/
-    position: relative;
-    display: block;
-
-    /* width: 20%; */
-    height: auto;
-
- }
-
- .post:hover .post-overlay {
-    display: flex;
-    /*Vamos a posicionar los likes y comments*/
-    justify-content: center;
-    align-items: center;
-    color: white;
-    text-align: center;
- }
-
-
- .post-image {
-    margin: 0;
- }
-
- .post-image img {
-    width: 100%;
-    vertical-align: top;
- }
-
- .post-overlay {
-    display: none;
-    background: rgba(0, 0, 0, .4);
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
- }
-
- .post-likes,
- .post-comments {
-    width: 80px;
-    margin: 5px;
-    font-weight: bold;
-    text-align: center;
-
-    display: inline-block;
- }
-
- .fa-instagram {
-    /* color: #212; */
-    font-size: 26px;
- }
-
- .far {
-    /* position: relative; */
-    right: 20px;
-    font-size: 25px;
-    align-self: center;
-    color: rgba(0, 0, 0, .95);
-
-
- }
-
- header {
-    display: flex;
-    justify-content: center;
-    border-bottom: 1px solid rgba(0, 0, 0, .0975);
-    height: 80px;
- }
-
- .wrapper {
-    justify-items: center;
-    display: grid;
-    /* flex-direction: column; */
-    justify-content: center;
-    min-width: 600px;
-    max-width: 975px;
-    margin: 60px 20px 0px;
-    margin-left: auto;
-    margin-right: auto;
-    /* margin-top: 20px; */
- }
-
- .header-wrapper {
-    width: 975px;
-    /* min-width: 630px; */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 20px;
-    
-    
- }
-
- .no-decoration {
-    text-decoration: none;
- }
-
- .flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
- }
-
- .logo {
-    display: flex;
-    margin: 0;
     padding: 0;
- }
-
- .logo a {
-    color: black;
-    display: flex;
-    /* grid-auto-flow: column; */
-    align-items: center;
-    font-size: 30px;
- }
-
- .logo span {
-    align-items: center;
-    font-size: 25px;
-    font-family: 'Pacifico';
- }
-
- .search-bar-with-icon {
-    display: flex;
-
-    /* background-image:  */
-    height: 27px;
-    align-self: center;
-    width: 215px;
-
 
  }
 
- .search-bar-with-icon input {
-    /* display:  */
-    /* background-image:  */
-    height: 27px;
-    align-self: center;
-    width: 215px;
-    border: 1px solid rgba(0, 0, 0, .15);
- }
+.container{
+   display:grid;
+   grid-template-columns: repeat(7, 1fr);
+   grid-template-rows: repeat(5, 1fr);
+   height: 100vh;
+   grid-gap: 10px;
 
- .search-bar-with-icon input::placeholder {
-    text-align: center;
-    font-size: 14px;
- }
+}
 
- input {
-    border-radius: 3px;
-    height: 28px;
- }
+.item {
+   background:lightblue;
+}
+.item img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+.item:nth-of-type(1){
+   grid-column: 1 /span 7;
+   grid-row: 1/ span 3;
+  
+}
 
- .fa-search {
-    position: relative;
-    left: 70px;
-    font-size: 10px;
-    align-self: center;
-    color: gray;
- }
+.item:nth-of-type(2){
+   grid-column: 1 / span 3;
+   grid-row: 4 / span 2;
+  
 
+}
 
- .menu {
-    align-self: center;
- }
+.item:nth-of-type(3){
+   grid-column: 4 / span 2;
+   grid-row: 4 / span 2;
+  
 
- .menu ul {
-    padding-left: 0;
- }
+}
 
- .menu ul {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
- }
+.item:nth-of-type(4){
+   grid-column: 6 / span 2;
+   grid-row: 4 / span 1;
+   
+}
 
- .menu-li {
-    padding: 0 15px;
- }
- .profile-pic{
-    display: flex;
-    
- }
-
-
- .profile-pic img {
-    border-radius: 50%;
-    padding-left: 10px;
-    align-self: center;
- }
-
-
- .user-info {
-    display: grid;
-    grid-template-columns: minmax(150px, 2fr) minmax(450px, 5fr);
-    grid-column: auto 15px;
-    border-bottom: 1px solid #efefef;
-    ;
- }
-
- .user-info-details-header {
-    /* display: grid;
-    grid-template-columns: minmax(120px, 3fr) minmax(115px, 2fr) minmax(125px, 2fr);
-    grid-template-areas: "cabecera boton configurar"
-       "publicaciones seguidores seguidos"
-       "nombre nombre nombre"
-       "descripcion descripcion descipcion"; */
-
-    display: flex;
-    align-items: center;
-    width: 270px;
-    justify-content: space-between;
-    flex-wrap: wrap;
- }
-
- #nickname {
-    grid-area: cabecera;
-    font-weight: lighter;
-    font-size: 28px;
-    color: rgb(38, 38, 38);
- }
-
- #follow-button {
-    display: block;
-    width: 60px;
-    height: 30px;
-    background-color: rgb(56, 151, 240);
-    border-radius: 4px;
-    border-color: transparent;
-    align-self: center;
-    justify-self: right;
-    color: white;
-    font-weight: 600;
-    /* max-width: ; */
-
- }
-
- .user-info-detailes-numbers{
-    display: flex;
-    width: 430px;
-    justify-content: space-between;
-
- }
- .user-info-details-last{
-    padding-bottom: 20px;
-
- }
+.item:nth-of-type(5){
+   
+}
